# ML-Bench

./: .gitignore  .gitmodules  LICENSE.md  README.md  flake.nix  pyproject.toml  requirements.txt
Execution env/: README.md
MLAgent/: External-Attention-pytorch_index.txt  PyTorch-GAN_index.txt  README.md  Time-Series-Library_index.txt  bert_index.txt  delete.py  dgl_index.txt  esm_index.txt  eval.py  if_index.txt  lavis_index.txt  merge.py  open_clip_index.txt  run.py  run_choose_repo.py  vid2vid_index.txt
MLAgent/config/: config_azure.yml  config_openai.yml
MLAgent/data/: agent_pass5_output.jsonl
MLAgent/functions/: args_function.yml  code_function.yml  step1_function.yml  step2_function.yml  step3_function.yml  step4_function.yml
MLAgent/repo/: README.md
MLAgent/result/: README.md  agent_dgl_full.jsonl
MLAgent/tools/: call_openai.py  keywords.py  repo.py
envs/: README.md
evaluation/: open_devin_eval
repos/: README.md  cal_tokens.sh  crawl_raw_repo_and_merge_benchmark.sh  crawl_whole_repo.py
repos/crawl_repos/: README.md  cal_tokens.py  crawl_raw_repo.sh
script/GPT/: run.sh
script/codellama/: README.md  chat_completion.py  mlbench_dataset.py
script/generate/: generate.sh
utils/: README.md  bm25.py  calculate_num_tokens.py  call_azure.py  crawl_raw_repo_and_merge_benchmark.sh  crawl_repos.py  crawl_whole_repo.py  download_model_weight_IF.py  download_model_weight_OC.py  download_model_weight_pics.sh  exec.py  exec.sh  exec_slurm.sh  generate_index.py  get_args.py  merge_test_set.py  read_yml.py  readme.py  repo_description.py  repo_name.py
(+23 files in other folders)
